--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "react": "15.4.2",
+    "react-addons-update": "^15.4.2",
     "react-native": "0.41.2",
     "react-native-android-wifi": "^0.0.13",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "remote-redux-devtools": "^0.5.7"
   },
